Revision history for {{$dist->name}}

{{$NEXT}}

2.38      2024-12-10 07:35:29 -0700
  - Added JSON::LD
  - Added Data::Section::Pluggable
  - Added Data::Section::Pluggable::Plugin::Yaml
  - Added Data::Section::Writer
  - Added Alien::cargo
  - Added Alien::cargo::capi
  - Added Alien::cargo::clone
  - Added Environment::Is
  - Added Test2::Tools::ComboObject
  - Archive::Libarchive::Compress
  - Added SQL::Formatter
  - Added Plack::Middleware::Zstandard
  - Added Alien::cue
  - Updated my dists to latest

2.37      2023-06-14 18:21:32 -0600
  - Update NetBSD to skip modules that do not install there
  - Updated my dists to latest
  - Added FFI::Platypus::Lang::Zig

2.36      2022-10-25 10:18:52 -0600
  - Update some Perl prereq skips
  - Added Memcached::RateLimit
  - Added Test2::Tools::Rustfmt
  - Updated my dists to latest

2.35      2022-10-20 18:48:30 -0600
  - Added Acme::Color::Rust
  - Added Exception::FFI::ErrorCode
  - Added Test2::Tools::MemoryCycle
  - Added Alien::Build::Plugin::Download::GitLab
  - Updated my dists to latest
  - Setting TASK_BELIKE_PLICEASE_NOWASM to true will
    skip Wasm dependencies

2.34      2022-09-05 22:33:51 -0600
  - Added App::tarweb
  - Added Plack::App::Libarchive
  - Added Plack::App::GitHubPages::Faux
  - Updated my dists to latest

2.33      2022-08-28 12:39:37 -0600
  - Added Alien::Build::Plugin::Fetch::HostAllowList
  - Added Alien::Build::Plugin::Fetch::HostBlockList

2.32      2022-08-26 20:30:32 -0600
  - Enable Wasm on Linux Arm64
  - Updated my dists to latest

2.31      2022-02-18 19:07:58 -0700
  - Remove some skips on macOS that appear to be working
  - Updated my dists to latest

2.30      2022-01-22 03:44:41 -0700
  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Added Dist::Zilla::Plugin::PPPort
  - Added MooseX::Types::JSON
  - Updated my dists to latest

2.29      2021-11-15 07:56:13 -0700
  - Updated my dists to latest
  - Remove deprecated Test::CChecker

2.28      2021-11-14 08:47:58 -0700