@@ -95,6 +95,7 @@ comes with this distribution for details.
 - App::af
 - App::cpangitify
 - App::cpanminus
+- App::datasection
 - App::plasm
 - App::Prove::Plugin::TermTable
 - App::Prove::Plugin::TermTableStty
@@ -158,6 +159,7 @@ comes with this distribution for details.
 - FFI::Platypus::Lang::Go
 - FFI::Platypus::Lang::Pascal
 - FFI::Platypus::Lang::Rust
+- FFI::Platypus::Lang::V
 - FFI::Platypus::Lang::Zig
 - FFI::Platypus::Legacy::Raw
 - FFI::Platypus::Record::StringArray
@@ -177,17 +179,20 @@ comes with this distribution for details.
 - JSON::MaybeXS
 - Kafka::Librd
 - Lingua::Alphabet::Phonetic::LAPD
+- Linux::Inotify
 - local::lib
 - Log::Log4perl::Appender::TAP
 - Memcached::RateLimit
 - Module::Which
 - Mojolicious::Plugin::Ident
 - Mojolicious::Plugin::TtRenderer
+- MooseX::NonMoose
 - MooseX::Types::JSON
 - NewFangle
 - Package::Checkpoint
 - PeekPoke::FFI
 - Perl::Critic::Plicease
+- Perl::Critic::Policy::Plicease::ProhibitArrayAssignAref
 - Photography::DX
 - Photography::EV
 - PkgConfig
@@ -207,6 +212,7 @@ comes with this distribution for details.
 - Term::Clui
 - Term::EditLine
 - Test2::Plugin::FauxHomeDir
+- Test2::Require::ProgramInPath
 - Test2::Tools::ComboObject
 - Test2::Tools::FFI
 - Test2::Tools::HTTP
@@ -228,13 +234,17 @@ comes with this distribution for details.
 - Test::Pod::Coverage
 - Test::Pod::Spelling::CommonMistakes
 - Test::Script
+- Test::SpellCheck
+- Test::SpellCheck::Plugin::Lang::EN::US
 - Test::Spelling
 - Test::Version
 - Text::HumanComputerWords
 - Text::Hunspell::FFI
+- Tie::Hash::DataSection
 - URI::ws
 - UUID::FFI
 - Wasm
+- WebService::WTFIsMyIP
 - Win32::ErrorMode
 - Win32::Getppid
 - Win32::Process::Info
