@@ -49,7 +49,7 @@ Alien::cargo::clone                            = 0.02
 Alien::castxml                                 = 0.02
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
-Alien::cmake3                                  = 0.08
+Alien::cmake3                                  = 0.10
 Alien::cue                                     = 0.01
 Alien::curl                                    = 0.11
 Alien::Editline                                = 0.10
@@ -72,7 +72,7 @@ Alien::LibreSSL                                = 0.06
 Alien::libuuid                                 = 0.05
 Alien::libtool                                 = 0.15
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.19
+Alien::Libxml2                                 = 0.20
 Alien::LZO                                     = 0.03
 Alien::m4                                      = 0.21
 Alien::MSYS                                    = 0.17
@@ -80,7 +80,7 @@ Alien::nasm                                    = 0.23
 Alien::Nettle                                  = 0.05
 Alien::OpenSSL                                 = 0.15
 Alien::patch                                   = 0.15
-Alien::pkgconf                                 = 0.20
+Alien::pkgconf                                 = 0.21
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.08
 Alien::unzip                                   = 0.03
@@ -97,6 +97,7 @@ AnyEvent::Open3::Simple                        = 0.90
 AnyEvent::WebSocket::Client                    = 0.55
 App::af                                        = 0.18
 App::cpangitify                                = 0.20
+App::datasection                               = 0.01
 App::plasm                                     = 0.03
 App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
@@ -118,18 +119,18 @@ Class::Inspector                               = 1.36
 Const::Introspect::C                           = 0.01
 Data::Section::Pluggable                       = 0.01
 Data::Section::Pluggable::Plugin::Yaml         = 0.01
-Data::Section::Writer                          = 0.01
+Data::Section::Writer                          = 0.04
 Devel::ebug                                    = 0.64
 Devel::ebug::HTTP                              = 0.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::MintingProfile::AlienBuild        = 0.07
 Dist::Zilla::MintingProfile::FFI               = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.32
+Dist::Zilla::Plugin::AlienBuild                = 0.33
 Dist::Zilla::Plugin::Alt                       = 0.08
 Dist::Zilla::Plugin::ArchiveTar                = 0.03
 Dist::Zilla::Plugin::CommentOut                = 0.05
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::FFI                       = 1.07
+Dist::Zilla::Plugin::FFI                       = 1.08
 Dist::Zilla::Plugin::InsertExample             = 0.15
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::Libarchive                = 0.03
@@ -137,7 +138,7 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.77
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.79
 Environment::Is                                = 0.01
 Env::ShellWords                                = 0.02
 Eval::LineNumbers                              = 0.35
@@ -148,7 +149,7 @@ FFI::C                                         = 0.15
 FFI::C::Stat                                   = 0.03
 FFI::CheckLib                                  = 0.31
 FFI::ExtractSymbols                            = 0.07
-FFI::Platypus                                  = 2.09
+FFI::Platypus                                  = 2.10
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.06
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
@@ -156,7 +157,8 @@ FFI::Platypus::Lang::Fortran                   = 0.14
 FFI::Platypus::Lang::Go                        = 0.03
 FFI::Platypus::Lang::Pascal                    = 0.11
 FFI::Platypus::Lang::Rust                      = 0.17
-FFI::Platypus::Lang::Zig                       = 0.01
+FFI::Platypus::Lang::V                         = 0.03
+FFI::Platypus::Lang::Zig                       = 0.02
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::Enum                      = 0.06
@@ -171,22 +173,25 @@ File::ReadBackwards                            = 1.06
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.27
 File::XDG                                      = 1.03
-JSON::LD                                       = 0.01
+JSON::LD                                       = 0.02
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
-Log::Log4perl::Appender::TAP                   = 0.05
+Linux::Inotify                                 = 0.06
+Log::Log4perl::Appender::TAP                   = 0.07
 Memcached::RateLimit                           = 0.09
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.62
+MooseX::NonMoose                               = 0.27
 MooseX::Types::JSON                            = 1.01
 NewFangle                                      = 0.09
 Return::MultiLevel                             = 0.08
 Package::Checkpoint                            = 0.01
 PeekPoke::FFI                                  = 0.02
-Perl::Critic::Plicease                         = 0.07
+Perl::Critic::Plicease                         = 0.10
+Perl::Critic::Policy::Plicease::ProhibitArrayAssignAref = 100.00
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
-PkgConfig                                      = 0.25026
+PkgConfig                                      = 0.26026
 PkgConfig::LibPkgConf                          = 0.11
 Plack::App::GitHubPages::Faux                  = 0.03
 Plack::App::Libarchive                         = 0.02
@@ -201,12 +206,15 @@ Task::AlienDev                                 = 0.02
 Task::FFIDev                                   = 0.02
 Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
-Test::Alien::CPP                               = 1.03
+Test::Alien::CPP                               = 1.04
 Test::Archive::Libarchive                      = 0.02
-Test::Fixme                                    = 0.16
-Test::Script                                   = 1.29
+Test::Fixme                                    = 0.17
+Test::Script                                   = 1.31
+Test::SpellCheck                               = 0.02
+Test::SpellCheck::Plugin::Lang::EN::US         = 0.03
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.06
+Test2::Require::ProgramInPath                  = 0.01
 Test2::Tools::ComboObject                      = 0.01
 Test2::Tools::FFI                              = 0.06
 Test2::Tools::HTTP                             = 0.12
@@ -219,9 +227,11 @@ Test2::Tools::Rustfmt                          = 0.05
 Test2::Tools::URL                              = 0.06
 Text::HumanComputerWords                       = 0.04
 Text::Hunspell::FFI                            = 0.04
+Tie::Hash::DataSection                         = 0.01
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.11
 Wasm                                           = 0.23
+WebService::WTFIsMyIP                          = 0.01
 Win32::ErrorMode                               = 0.07
 Win32::Getppid                                 = 0.06
 Win32::Process::Info                           = 1.023
